2013-12-10  6.8.7-10 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.7-10, SVN revision 13965.

2013-12-10  6.8.7-10  SiuChi Chan  <...>
  * fix crash when using -resize with GPU acceleration (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=24603).

2013-12-08  6.8.7-9 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.7-9, SVN revision 13950.

2013-12-05  6.8.7-9  SiuChi Chan  <...>
  * silence warning related to GPU memory issues.
  * check if OpenCL is disabled in checkOpenCLEnvironment() method
  * turn off OpenCL path for Intel OpenCL to avoid crash when not enough memory
  * fixed a bug for OpenCL convolution
  * reduce compiler warnings

2013-12-03  6.8.7-9 Glenn Randers-Pehrson <glennrp@image...>
  * fixed bug in coders/png.c that caused -define png:color-type=0 to
    fail (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=1&t=24568).

2013-11-30  6.8.7-9 Dirk Lemstra <dirk@snakeware...>
  * fixed bug in automatic selection of OpenCL device (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=24542).
  * fixed transparency for 32 bits BMP.

2013-11-28  6.8.7-9 Cristy  <quetzlzacatenango@image...>
  * The -type bilevel option sometimes returned an all white image (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=24444).
  * Check blue channel threshold for -solarize option (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=24473).

2013-11-27  6.8.7-8 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.7-8, SVN revision 13850.

2013-11-27  6.8.7-8  SiuChi Chan  <...>
  * Add an OpenCL-accelerated analog of AddNoiseImage().

2013-11-23  6.8.7-7 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.7-7, SVN revision 13827.

2013-11-23  6.8.7-7  SiuChi Chan  <...>
  * simplified interface to initialize the OpenCL environment
  * automatic OpenCL device selection algorithm