@@ -2781,9 +2781,9 @@ static ssize_t MorphologyPrimitive(const Image *image, Image *result_image,
             for (v=0; v < (ssize_t) kernel->height; v++) {
               if ( IsNaN(*k) ) continue;
               alpha=QuantumScale*(QuantumRange-GetPixelOpacity(k_pixels));
-              gamma += alpha; /* normalize alpha weights only */
               count++;        /* number of alpha values collected */
               alpha*=(*k);    /* include kernel weighting now */
+              gamma += alpha; /* normalize alpha weights only */
               result.red     += alpha*GetPixelRed(k_pixels);
               result.green   += alpha*GetPixelGreen(k_pixels);
               result.blue    += alpha*GetPixelBlue(k_pixels);
@@ -2795,8 +2795,8 @@ static ssize_t MorphologyPrimitive(const Image *image, Image *result_image,
               k_indexes++;
             }
             /* Sync'ed channels, all channels are modified */
-            gamma=(double) count/(fabs((double) gamma) < MagickEpsilon ?
-              MagickEpsilon : gamma);
+            gamma=PerceptibleReciprocal(gamma);
+            gamma*=(double) kernel->height/count;
             SetPixelRed(q,ClampToQuantum(gamma*result.red));
             SetPixelGreen(q,ClampToQuantum(gamma*result.green));
             SetPixelBlue(q,ClampToQuantum(gamma*result.blue));
@@ -3026,9 +3026,9 @@ static ssize_t MorphologyPrimitive(const Image *image, Image *result_image,
                   for (u=0; u < (ssize_t) kernel->width; u++, k--) {
                     if ( IsNaN(*k) ) continue;
                     alpha=QuantumScale*(QuantumRange-k_pixels[u].opacity);
-                    gamma += alpha;    /* normalize alpha weights only */
                     count++;           /* number of alpha values collected */
-                    alpha=alpha*(*k);  /* include kernel weighting now */
+                    alpha*=(*k);  /* include kernel weighting now */
+                    gamma += alpha;    /* normalize alpha weights only */
                     result.red     += alpha*k_pixels[u].red;
                     result.green   += alpha*k_pixels[u].green;
                     result.blue    += alpha*k_pixels[u].blue;
@@ -3040,8 +3040,8 @@ static ssize_t MorphologyPrimitive(const Image *image, Image *result_image,
                   k_indexes += virt_width;
                 }
                 /* Sync'ed channels, all channels are modified */
-                gamma=(double) count/(fabs((double) gamma) < MagickEpsilon ?
-                  MagickEpsilon : gamma);
+                gamma=PerceptibleReciprocal(gamma);
+                gamma*=(double) kernel->height*kernel->width/count;
                 SetPixelRed(q,ClampToQuantum((MagickRealType) (gamma*result.red)));
                 SetPixelGreen(q,ClampToQuantum((MagickRealType) (gamma*result.green)));
                 SetPixelBlue(q,ClampToQuantum((MagickRealType) (gamma*result.blue)));
